Mon Dec  9 00:21:19 2015  Yuki Nishijima  <mail@yukinishijima.net>

	* gems/bundled_gems: Upgrade the did_you_mean gem to 1.0.0.rc1

Wed Dec  9 00:17:49 2015  Koichi Sasada  <ko1@atdot.net>

	* compile.c (ibf_load_setup): cast to int.

Wed Dec  9 00:13:09 2015  Koichi Sasada  <ko1@atdot.net>

	* compile.c (ibf_setup_load): rename to ibf_load_setup().

	* compile.c (iseq_load_setup): check binary format.

Tue Dec  8 23:30:07 2015  Naohisa Goto  <ngotogenome@gmail.com>

	* test/io/console/test_io_console.rb (run_pty): Avoid waiting twice
	  for a process. Fix Errno::ECHILD in TestIO_Console#test_close and
	  TestIO_Console#test_sync.

Tue Dec  8 23:05:47 2015  Koichi Sasada  <ko1@atdot.net>

	* compile.c (iseq_ibf_dump): fix for clang type checker.

Tue Dec  8 23:04:02 2015  Koichi Sasada  <ko1@atdot.net>

	* iseq.c (iseq_s_load): fix mysterious bug.

Tue Dec  8 22:31:58 2015  Koichi Sasada  <ko1@atdot.net>

	* introduce new ISeq binary format serializer/de-serializer
	  and a pre-compilation/runtime loader sample.
	  [Feature #11788]

	* iseq.c: add new methods:
	  * RubyVM::InstructionSequence#to_binary_format(extra_data = nil)
	  * RubyVM::InstructionSequence.from_binary_format(binary)
	  * RubyVM::InstructionSequence.from_binary_format_extra_data(binary)

	* compile.c: implement body of this new feature.

	* load.c (rb_load_internal0), iseq.c (rb_iseq_load_iseq):
	  call RubyVM::InstructionSequence.load_iseq(fname) with
	  loading script name if this method is defined.

	  We can return any ISeq object as a result value.
	  Otherwise loading will be continue as usual.

	  This interface is not matured and is not extensible.
	  So that we don't guarantee the future compatibility of this method.
	  Basically, you shouldn't use this method.

	* iseq.h: move ISEQ_MAJOR/MINOR_VERSION (and some definitions)
	  from iseq.c.

	* encoding.c (rb_data_is_encoding), internal.h: added.

	* vm_core.h: add several supports for lazy load.